# mini-llm-gateway

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt  run.py
gateway/: __init__.py  __main__.py  config.py  main.py
gateway/api/: admin.py  models.py  proxy.py
gateway/models/: manager.py
gateway/providers/: deepseek.py
gateway/stats/: collector.py
gateway/web/: router.py
static/: dashboard.html  index.html  style.css
