[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-llm-gateway"
version = "1.0.0"
description = "A lightweight LLM API gateway with multi-model support and usage statistics"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "filelock>=3.13.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mini-llm-gateway = "gateway.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway*"]
exclude = ["gateway/providers*"]
